# egui-states

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  REDME.md  Trunk.toml  build.rs  build_api.py  cliff.toml  main.rs  pyproject.toml
.cargo/: config.toml
.zed/: debug.json
crates/_egui-pysync_old/: Cargo.toml  build.rs
crates/egui-pysync/: Cargo.toml
crates/egui-pysync-macros/: Cargo.toml
crates/egui-pysync/src/: build.rs  client.rs  image.rs  lib.rs  py_server.rs  states_creator.rs  states_server.rs  transport.rs  values.rs  values_common.rs
crates/egui-pysync/src/client/: client.rs  mod.rs  states_creator.rs
crates/egui-pysync/src/server/: python_convert.rs  server.rs  signals.rs
crates/egui-pysync/src/values/: dict.rs  list.rs
crates/egui-states/: Cargo.toml
crates/egui-states-2/: Cargo.toml
crates/egui-states-core/: Cargo.toml
crates/egui-states-core-2/: Cargo.toml
crates/egui-states-core-old/: Cargo.toml
crates/egui-states-core/src/: collections.rs  controls.rs  empty.rs  event.rs  event_async.rs  graphs.rs  hasher.rs  image.rs  lib.rs  nohash.rs  serialization.rs  types.rs  values.rs
crates/egui-states-macros/: Cargo.toml
crates/egui-states-old/: Cargo.toml
crates/egui-states-pyserver/: Cargo.toml  build.rs
crates/egui-states-python/: Cargo.toml  lib.rs
crates/egui-states-server/: Cargo.toml
crates/egui-states-server-2/: Cargo.toml
crates/egui-states-server-2/src/: lib.rs  py_server.rs  pydict.rs  pygraphs.rs  pyimage.rs  pylist.rs  pyvalues.rs  server.rs  server_core.rs  signals.rs  states_server.rs  values.rs
crates/egui-states-server-old/: Cargo.toml
crates/egui-states-server-old/src/: lib.rs  py_server.rs  pydict.rs  pygraphs.rs  pyimage.rs  pylist.rs  pyvalues.rs  server.rs  server_core.rs  signals.rs  states_server.rs
crates/egui-states-server/src/: graph.rs  graphs.rs  image.rs  lib.rs  list.rs  map.rs  py_server.rs  pydict.rs  pyimage.rs  pylist.rs  python_convert.rs  pyvalues.rs  sender.rs  server.rs  server_core.rs  signals.rs  socket_reader.rs  states.rs  states_server.rs  value_parsing.rs  values.rs
crates/egui-states-server/src/python/: mod.rs  pygraphs.rs  pyimage.rs  pyparsing.rs  pyserver.rs  pytypes.rs  type_creator.rs
crates/egui-states-widgets/: Cargo.toml
crates/egui-states/src/: build_scripts.rs  channel.rs  client.rs  client_base.rs  client_state.rs  client_states.rs  client_wasm.rs  collections.rs  data_header.rs  data_transport.rs  dict.rs  event.rs  event_async.rs  graphs.rs  handle_message.rs  hashing.rs  image.rs  image_header.rs  image_transport.rs  initial_value.rs  lib.rs  list.rs  map.rs  parser.rs  parser_values.rs  sender.rs  serialization.rs  states_creator.rs  transport.rs  types.rs  values.rs  values_atomic.rs  values_creator.rs  values_info.rs  websocket.rs  websocket_wasm.rs
crates/egui-states/src/build_script/: build_scripts.rs  mod.rs  python.rs  scripts.rs  state_creator.rs  values_info.rs
crates/egui-states/src/build_scripts/: mod.rs  python.rs  scripts.rs  state_creator.rs  states_creator_build.rs
crates/egui-states/src/client/: client.rs  client_state.rs  data.rs  data_multi.rs  data_take.rs  event.rs  graphs.rs  handle_message.rs  image.rs  list.rs  map.rs  messages.rs  mod.rs  sender.rs  states_creator.rs  value_map.rs  value_vec.rs  values.rs  websocket.rs  websocket_wasm.rs
crates/egui-states/src/python/: mod.rs  pydata.rs  pygraphs.rs  pyimage.rs  pyparsing.rs  pyserver.rs  pytypes.rs
crates/egui-states/src/server/: data.rs  data_multi_server.rs  data_server.rs  data_take_server.rs  event.rs  graphs.rs  image.rs  image_server.rs  list.rs  map.rs  map_server.rs  mod.rs  sender.rs  server.rs  server_core.rs  signals.rs  socket_reader.rs  value_parsing.rs  values.rs  values_server.rs
egui-pyclient/: Cargo.toml
egui-pyclient/src/: client.rs  client_state.rs  dict.rs  graphs.rs  image.rs  lib.rs  list.rs  states_creator.rs  values.rs
egui-pymacros/: Cargo.toml
egui-pymacros/src/: enums.rs  lib.rs  states.rs
egui-pyserver/: Cargo.toml
egui-pyserver/src/: dict.rs  graphs.rs  image.rs  lib.rs  list.rs  py_convert.rs  py_server.rs  python_convert.rs  server.rs  signals.rs  states_creator.rs  values.rs
egui-pysync/: Cargo.toml
egui-pysync-client/: Cargo.toml
egui-pysync-client/src/: client.rs  client_state.rs  dict.rs  graphs.rs  (+6 more)
egui-pysync-common/: Cargo.toml
egui-pysync-macros/: Cargo.toml
egui-pysync-server/: Cargo.toml
egui-pysync-transport/: Cargo.toml
egui-pysync/src/: build.rs  commands.rs  dict.rs  graphs.rs  image.rs  lib.rs  transport.rs  values.rs  values_impl.rs
egui-pytransport/: Cargo.toml
egui_pysync/: __init__.py  __main__.py  base.py  base.pyi  core.pyi  enums.py  server.py  signals.py  states.py  structures.py  types.py  typing.py
egui_states/: __init__.py  _core.pyi  custom_types.py  enums.py  logging.py  server.py  signals.py  structures.py
egui_states_old/: enums.py  server.py  structures.py  typing.py
example/: states_server.py  test.py
example/gui/: Cargo.toml  build.rs  main.rs
example/gui/data/: manifest.json
example/gui/src/: lib.rs  main.rs  main_app.rs  states.rs
example/gui/web/: GuiTest.js  index.html
examples/: .gitignore
examples/gui/: Cargo.toml  index.html
examples/gui/src/: lib.rs  main.rs  main_app.rs  states.rs
examples/images_states/: Cargo.toml  build.rs  example_images.py  pyproject.toml
examples/images_states/images/: __init__.py  core.pyi  state_server.pyi  states.py
examples/images_states/src/: lib.rs  states.rs
examples/states-server/: Cargo.toml  build.rs  pyproject.toml  server.py  states.py  test.py
examples/states-server/src/: lib.rs  states.rs
examples/states-server/states_server/: core.pyi  states.py
scripts/: build-linux.sh  build-win.ps1  docker-build.sh  win-build.ps1
src/: build.rs  client.rs  client_state.rs  commands.rs  dict.rs  graphs.rs  image.rs  lib.rs  list.rs  nohash.rs  py_server.rs  python_convert.rs  server.rs  signals.rs  states_creator.rs  states_server.rs  transport.rs  values.rs
states-server/: Cargo.toml
tests/: test_gui.py
(+133 files in other folders)
