[workspace]
members = [
    "crates/egui-states-macros",
    "crates/egui-states",
    "crates/egui-states-core",
    "crates/egui-states-server",
    "crates/egui-states-widgets",
    "example/gui",
]
resolver = "3"

[workspace.package]
version = "0.9.0"
edition = "2024"

[workspace.dependencies]
egui_states_macros = { path = "crates/egui-states-macros" }
egui_states_core = { path = "crates/egui-states-core" }
egui_states = { path = "crates/egui-states" }
egui_states_server = { path = "crates/egui-states-server" }
egui_states_widgets = { path = "crates/egui-states-widgets" }

gui = { path = "example/gui" }

serde = "1"
tokio-tungstenite = "0.28"
tokio = "1.49"
futures-util = "0.3"
parking_lot = "0.12"
bytes = "1.11"
