[workspace]
members = [
    "crates/egui-states",
    "crates/egui-states-macros",
    "crates/egui-states-python",
    "example/gui",
]
resolver = "3"

[workspace.package]
version = "0.13.1"
edition = "2024"

[workspace.dependencies]
egui_states_macros = { path = "crates/egui-states-macros" }
egui_states = { path = "crates/egui-states" }
