[build-system]
requires = ["maturin>=1.10"]
build-backend = "maturin"

[project]
name = "egui-states"
description = "A Python library for egui-states project."
authors = [{ name = "Vojtech Homola", email = "vojhom@outlook.cz" }]
requires-python = ">=3.12"
license = { file = "LICENSE" }
dynamic = ["version"]
readme = "README.md"

dependencies = ["numpy"]

[dependency-groups]
dev = ["ipython", "matplotlib"]

[tool.maturin]
bindings = "pyo3"
python-packages = ["egui_states"]
module-name = "egui_states._core"
manifest-path = "crates/egui-states-server/Cargo.toml"
features = ["python"]

# [tool.hatch.version]
# path = "egui_states/version.py"

# [tool.hatch.build]
# packages = ["egui_states"]
# ignore-vcs = true

[tool.uv]
# workspace.members = ["examples/states-server"]

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = ["E", "F", "W", "D", "N", "PL", "UP", "NPY"]
pydocstyle.convention = "google"

unfixable = [
    "F401", # unused-imports
]

ignore = [
    "PLR0904", # too-many-public-methods
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "PLR0917", # too-many-positional
    "PLR0912", # too-many-branches
    "D100",    # undocumented-public-module
]
