[build-system]
requires = ["maturin>=1.12"]
build-backend = "maturin"

[project]
name = "egui-states"
description = "A Python library for egui-states project."
authors = [{ name = "Vojtech Homola", email = "vojhom@outlook.cz" }]
requires-python = ">=3.12"
license = { file = "LICENSE" }
dynamic = ["version"]
readme = "README.md"

dependencies = ["numpy"]

[dependency-groups]
dev = ["pytest", "ipython", "matplotlib", "maturin", "git-cliff"]

[tool.maturin]
bindings = "pyo3"
python-packages = ["egui_states"]
module-name = "egui_states._core"
include = ["egui_states/version.py"]
manifest-path = "crates/egui-states-python/Cargo.toml"

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = ["E", "F", "W", "D", "N", "PL", "UP", "NPY"]
pydocstyle.convention = "google"

unfixable = [
    "F401", # unused-imports
]

ignore = [
    "PLR0904", # too-many-public-methods
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "PLR0917", # too-many-positional
    "PLR0912", # too-many-branches
    "D100",    # undocumented-public-module
]

[tool.git-cliff.changelog]
header = "# Changelog\n"
body = """
{% if version %}\
    \n## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    \n## [unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | striptags | trim | upper_first }}
    {% for commit in commits %}
        - {% if commit.scope %}*({{ commit.scope }})* {% endif %}\
            {% if commit.breaking %}[**breaking**] {% endif %}\
            {{ commit.message | upper_first }}\
    {% endfor %}
{% endfor %}
"""
# Remove leading and trailing whitespaces from the changelog's body.
trim = true
# Render body even when there are no releases to process.
render_always = true
output = "CHANGELOG.md"

[tool.git-cliff.git]
# Parse commits according to the conventional commits specification.
# See https://www.conventionalcommits.org
conventional_commits = true
# Exclude commits that do not match the conventional commits specification.
filter_unconventional = true
# Require all commits to be conventional.
# Takes precedence over filter_unconventional.
require_conventional = false
# Split commits on newlines, treating each line as an individual commit.
split_commits = false
# Prevent commits that are breaking from being excluded by commit parsers.
protect_breaking_commits = false
# An array of regex based parsers for extracting data from the commit message.
# Assigns commits to groups.
# Optionally sets the commit's scope and can decide to exclude commits from further processing.
commit_parsers = [
    { message = "^feat", group = "<!-- 0 -->🚀 Features" },
    { message = "^fix", group = "<!-- 1 -->🐛 Bug Fixes" },
    { message = "^refactor", group = "<!-- 2 -->🚜 Refactor" },
    { message = "^doc", group = "<!-- 3 -->📚 Documentation" },
    { message = "^perf", group = "<!-- 4 -->⚡ Performance" },
    { message = "^change", group = "<!-- 5 -->🔄 Changes" },
    { message = "^style", group = "<!-- 6 -->🎨 Styling" },
    { message = "^test", group = "<!-- 7 -->🧪 Testing" },
    { body = ".*security", group = "<!-- 8 -->🛡️ Security" },
    { message = "^revert", group = "<!-- 9 -->◀️ Revert" },
    # { message = "^chore\\(release\\)", skip = true },
    # { message = "^chore\\(deps.*\\)", skip = true },
    # { message = "^chore\\(pr\\)", skip = true },
    # { message = "^chore\\(pull\\)", skip = true },
    # { message = "^chore|^ci", group = "<!-- 7 -->⚙️ Miscellaneous Tasks" },
    { message = "^chore|^ci", skip = true },
    # { message = ".*", group = "<!-- 10 -->💼 Other" },
    # { message = ".*", skip = true },
]
# Exclude commits that are not matched by any commit parser.
filter_commits = true
# Fail on a commit that is not matched by any commit parser.
fail_on_unmatched_commit = false
# An array of link parsers for extracting external references, and turning them into URLs, using regex.
link_parsers = []
# Include only the tags that belong to the current branch.
use_branch_tags = false
# Order releases topologically instead of chronologically.
topo_order = false
# Order commits topologically instead of chronologically.
topo_order_commits = true
# Order of commits in each group/release within the changelog.
# Allowed values: newest, oldest
sort_commits = "oldest"
# Process submodules commits
recurse_submodules = false
# skip_tags = "^(0\\.[0-7]\\.|old-|legacy-)"
commit_preprocessors = [
    { pattern = "\\s*\\(#(\\d+)\\)$", replace = " [#$1](https://github.com/vojtech-homola/egui-states/pull/$1)" },
]

# [remote.github]
# owner = "vojtech-homola"
# repo = "egui-states"

[tool.pytest]
testpaths = ["example/python/tests.py"]
