[package]
name = "egui_pysync"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
egui_pymacros = { workspace = true }
postcard = { version = "1.1.1", features = ["use-std"] }
serde = "*"
heapless = "*"
pyo3 = { version = "0.23.3", features = ["extension-module"] }
