[package]
name = "states_server"
version.workspace = true
edition.workspace = true

[features]
server = ["dep:pyo3"]
ui = ["dep:egui"]

[dependencies]
pyo3 = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
states_server_macros = { path = "../states-server-macros" }
