[package]
name = "egui_pysync"
version.workspace = true
edition.workspace = true

[features]
server = ["dep:pyo3"]

[dependencies]
egui_pysync_macros = { workspace = true }
postcard = { version = "1.1.2", features = ["use-std"] }
egui = { version = ">= 0.32", features = ["rayon"] }
serde = "1"
heapless = "0.7"
pyo3 = { version = ">=0.24", optional = true }
