[package]
name = "egui_pysync"
version.workspace = true
edition.workspace = true

[features]
server = ["dep:pyo3"]
client = ["dep:egui"]

[dependencies]
egui_pysync_macros = { workspace = true }
postcard = { version = "1.1", features = ["use-std"] }
serde = "1"
heapless = "0.7"
tungstenite = "0.27"

egui = { version = ">= 0.32", features = ["rayon"], optional = true }
pyo3 = { version = ">=0.24", optional = true }
