[package]
name = "egui_states_server_2"
version.workspace = true
edition.workspace = true

[dependencies]
pyo3 = ">=0.27"
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync"] }
futures-util = { workspace = true }
parking_lot = { workspace = true }

egui_states_core_2 = { workspace = true }
egui_states_macros = { workspace = true }
