[package]
name = "egui_states_server"
version.workspace = true
edition.workspace = true

[features]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = ">=0.27", optional = true }

bytes = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync"] }
futures-util = { workspace = true }
parking_lot = { workspace = true }

egui_states_core = { workspace = true }
egui_states_macros = { workspace = true }
