[package]
name = "egui_states"
version.workspace = true
edition.workspace = true

[features]
# client = ["dep:tokio-tungstenite", "tokio/rt-multi-thread", "tokio/net"]
# client-wasm = [
#     "dep:ws_stream_wasm",
#     "dep:log",
#     "dep:wasm-bindgen-futures",
#     "tokio/macros",
# ]
# build-script = []

[dependencies]
serde = { workspace = true }
egui = { version = ">= 0.33", features = ["rayon"] }
futures-util = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }

egui_states_core = { workspace = true }
egui_states_macros = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "net"] }
tokio-tungstenite = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync", "macros"] }
ws_stream_wasm = { version = "0.7" }
wasm-bindgen-futures = { version = "0.4" }
log = { version = "0.4" }
