[package]
name = "egui_states"
version.workspace = true
edition.workspace = true

[features]
default = ["client"]
client = ["dep:egui"]
server = ["tokio/macros"]
python = ["server", "dep:pyo3"]
build_scripts = ["client"]

[dependencies]
egui = { version = ">= 0.33", features = ["rayon"], optional = true }
pyo3 = { version = "0.28", optional = true }

postcard = { version = "1.1", features = ["use-std"] }
futures-util = "0.3"
parking_lot = "0.12"
bytes = "1.11"
sha2 = "0.10"
serde = "1"

egui_states_macros = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.49", features = ["sync", "rt-multi-thread", "net"] }
tokio-tungstenite = { version = "0.28" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.49", features = ["sync", "macros"] }
ws_stream_wasm = { version = "0.7" }
wasm-bindgen-futures = { version = "0.4" }
log = { version = "0.4" }
