[package]
name = "gui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "GuiTest"
path = "src/main.rs"

[dependencies]
serde = "*"
eframe = "0.33"
egui = { version = "0.33", features = ["rayon"] }
egui_states = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4"

[build-dependencies]
egui_states = { workspace = true }
serde = "*"
