[package]
name = "gui"
version.workspace = true
edition.workspace = true

[lib]
name = "gui"

[[bin]]
name = "GuiTest"
path = "src/main.rs"

[dependencies]
serde = "*"
eframe = "0.33.0"
egui = { version = "0.33.0", features = ["rayon"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui_states = { workspace = true, features = ["client"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui_states = { workspace = true, features = ["client-wasm"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4"
