[package]
name = "example_images_states"
version.workspace = true
edition.workspace = true
resolver = "3"

[lib]
name = "core"
crate-type = ["cdylib"]

[dependencies]
egui_pysync = { workspace = true, features = ["server"] }
pyo3 = { version = "0.25.1", features = ["extension-module"] }

[build-dependencies]
egui_pysync = { workspace = true }
