[package]
name = "example_images_states"
version.workspace = true
edition.workspace = true
resolver = "3"

[lib]
name = "core"
crate-type = ["cdylib"]

[dependencies]
egui_states_pyserver = { workspace = true }
pyo3 = { version = "0.26", features = ["extension-module"] }

[build-dependencies]
egui_states_pyserver = { workspace = true }
