[package]
name = "states_server"
version.workspace = true
edition.workspace = true
resolver = "3"

[lib]
name = "core"
crate-type = ["cdylib"]

[dependencies]
serde = "*"
egui_states_server = { workspace = true }
pyo3 = { version = "0.27", features = ["extension-module"] }

[build-dependencies]
egui_states = { workspace = true }
gui = { workspace = true }
